# SpeechComprehension

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.json
docs/: codec_latent_editor.md  datasets.md  phoneme_level_editor.md  research_baseline.md
speech_comprehension/: __init__.py  asr.py  audio.py  cli.py  codec_editor.py  confidence.py  datasets.py  edits.py  experiment.py  extract_encodec_tokens.py  objective.py  phoneme_editor.py  pipeline.py  prepare_audio.py  text.py  train_soundstream.py
tests/: test_asr.py  test_audio.py  test_codec_editor.py  test_confidence.py  test_datasets.py  test_experiment.py  test_extract_encodec_tokens.py  test_objective.py  test_phoneme_editor.py  test_pipeline_mock.py  test_prepare_audio.py  test_soundstream_optional.py  test_text.py  test_train_soundstream.py
